--- a/package.json
+++ b/package.json
@@ -8,13 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.7",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "next": "12.0.7",
+    "next-mdx-remote": "^3.0.8",
+    "next-themes": "^0.0.15",
+    "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
     "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
